Standardizing folders struct

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,13 @@
 .idea
-.settings
-odoo
-
+# dotfiles, with exceptions:
+# .*
+.gitignore
+# python compiled files
+*.py[co]
+# emacs backup files
+*~
+# not tracked subdirectories
+/env/
+/src/
+/filestore/
+/logs/
